# gemini-for-code

./: README.md  generate_SQL.ipynb
poetry_dir/: pyproject.toml
