[project]
name = "poetry-dir"
version = "0.1.0"
description = ""
authors = [
    {name = "jtott"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "google-genai (>=1.7.0,<2.0.0)",
    "google-cloud-aiplatform (>=1.85.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
